fix: fixed the failure case except merge try second grading